[package]
name = "util"
description = "A middleware collection of utilites for Frame-Host."
version = "0.1.0"
authors = ["Lance Wallis <bleudeveloper@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib"]
path = "util.rs"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
